test/expected/explain_rrgi.out
explain register int &x
                     ^
22: error: reference is not supported in C
